--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<style>
-body { background: url(night-white-hair-anime-anime-girls-school-uniform-Tomori-Nao-Charlotte-anime-darkness-screenshot-1920x1080-px-computer-wallpaper-629643.jpg); }
-</style>
+<h1>RojerzScripts!</h1>
+<p>Разработка...</p>
 </body>
 </html>
