--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>RojerzScripts!</h1>
-<p>Разработка...</p>
+<h1>RojersScripts!</h1>
+<p>Сайт находится в разработке</p>
+<h1>update log:</h1>
 </body>
 </html>
