--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>RojersScripts!</h1>
+<h1>rojerscripts</h1>
 <p>Сайт находится в разработке</p>
-<h1>update log:</h1>
 </body>
 </html>
