--- a/index.html
+++ b/index.html
@@ -81,21 +81,14 @@
 				<div class="col-md-12 col-md-offset-0 text-center">
 					<div class="display-t">
 						<div class="display-tc">
-							<h1 class="animate-box" data-animate-effect="fadeIn">The Greatest Firm You Can Trust</h1>
+							<h1 class="animate-box" data-animate-effect="fadeIn">луня роджерс хороший человек</h1>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
-	
-	
+	</section>	
 	</div>
-
-	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-	</div>
-	
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
