--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	</nav>
 
 	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
-		<div class="container">
+		<div class="overlay"></div>
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0 text-center">
 					<div class="display-t">
