--- a/index.html
+++ b/index.html
@@ -68,22 +68,16 @@
 			</div>
 		</div>
 	</section>
+
 	<footer id="gtco-footer" role="contentinfo">
 		<div class="container">
-			
 			<div class="row copyright">
 				<div class="col-md-12">
 					<p class="pull-left">
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; Developer Scripts Jason Rojers & Looney Rojers</small> 
+						<small class="block">Developer Site  <a href="https://vk.com/j.rojers" target="_blank">Jason Rojers</a></small>
 					</p>
 					<p class="pull-right">
-						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
 					</p>
 				</div>
 			</div>
