--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 				</div>
 			</div>
 		</div>
+	</section>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.easing.1.3.js"></script>
 	<script src="js/bootstrap.min.js"></script>
