--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>rojerscripts &mdash; test</title>
+	<!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400, 900" rel="stylesheet"> -->
 	
+	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
+	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/themify-icons.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -38,7 +41,7 @@
 			
 		</div>
 	</nav>
-	<section id="еблан" class="чё бля" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
+	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -52,6 +55,24 @@
 			</div>
 		</div>
 	</section>
+
+	<footer id="gtco-footer" role="contentinfo">
+		<div class="container">
+			<div class="row copyright">
+				<div class="col-md-12">
+					<p class="pull-left">
+						<small class="block">&copy; Developer Scripts Jason Rojers & Looney Rojers</small> 
+						<small class="block">Developer Site  <a href="https://vk.com/j.rojers" target="_blank">Jason Rojers</a></small>
+					</p>
+					<p class="pull-right">
+					</p>
+				</div>
+			</div>
+
+		</div>
+	</footer>
+	</div>	
+	</div>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.easing.1.3.js"></script>
 	<script src="js/bootstrap.min.js"></script>
