--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="gtco-loader"></div>
 	
 	<div id="page">
-	<nav class="pages" role="pages">
+		<nav class="gtco-nav" role="navigation">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-2 col-xs-12">
