--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 	<div id="page">
 		<nav class="gtco-nav" role="navigation">
 		<div class="container">
-			<div class="row">
+			<div class="pages">
 				<div class="col-sm-2 col-xs-12">
 					<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1 main-nav">
 					<ul>
-						<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
-						<li><a href="#" data-nav-section="about">Информация о скриптах</a></li>
-						<li><a href="#" data-nav-section="practice-areas">Контакты для связи</a></li>
-						<li class="btn-cta"><a href="#" data-nav-section="contact"><span>Скрипты для скачивания</span></a></li>
+						<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
+						<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
+						<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
+						<li class="btn-cta"><a href="#" data-nav-section="scripts-download"><span>Скрипты для скачивания</span></a></li>
 					</ul>
 				</div>
 			</div>
