--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 						<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 						<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
-						<li class="btn-cta"><a href="#" data-nav-section="scripts-download"><span>Скрипты для скачивания</span></a></li>
+						<li class="btn-cta"><a href="#" data-nav-section="scripts-download"><span><a href="downloads.html"></a></span></a></li>
 					</ul>
 				</div>
 			</div>
