--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 						<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 						<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
-						<li class="btn-cta"><a href="#" data-nav-section="scripts-download"><span><a href="downloads.html"></a></span></a></li>
+						<li class="btn-cta"><a href="downloads.html" data-nav-section="scripts-download"><span>Скрипты для скачивания</a></span></a></li>
 					</ul>
 				</div>
 			</div>
@@ -65,48 +65,6 @@
 	</section>	
 	</div>
 
-	<section id="gtco-contact" data-section="scripts-download">
-		<div class="container">
-			<div class="row row-pb-md">
-				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
-					<h1>Contact Us</h1>
-					<p class="sub">Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Contact</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 col-md-push-6 animate-box">
-					<form action="#">
-						<div class="form-group">
-							<label for="name" class="sr-only">Name</label>
-							<input type="text" class="form-control" placeholder="Name" id="name">
-						</div>
-						<div class="form-group">
-							<label for="email" class="sr-only">Email</label>
-							<input type="text" class="form-control" placeholder="Email" id="email">
-						</div>
-						<div class="form-group">
-							<label for="message" class="sr-only">Message</label>
-							<textarea name="message" id="message" class="form-control" cols="30" rows="7" placeholder="Message"></textarea>
-						</div>
-						<div class="form-group">
-							<input type="submit" value="Send Message" class="btn btn-primary">
-						</div>
-					</form>
-				</div>
-				<div class="col-md-4 col-md-pull-6 animate-box">
-					<div class="gtco-contact-info">
-						<ul>
-							<li class="address">198 West 21th Street, Suite 721 New York NY 10016</li>
-							<li class="phone"><a href="tel://1235235598">+ 1235 2355 98</a></li>
-							<li class="email"><a href="mailto:info@yoursite.com">info@example.com</a></li>
-							<li class="url"><a href="#">http://example.com</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 	
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.easing.1.3.js"></script>
