--- a/downloads.html
+++ b/downloads.html
@@ -1,14 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <div id="page">
+<!DOCTYPE HTML>
+<html>
+	<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>rojerscripts &mdash; Скрипты для скачивания</title>
+	
+	
+
+	<link rel="stylesheet" href="css/animate.css">
+	
+	<link rel="stylesheet" href="css/icomoon.css">
+
+	<link rel="stylesheet" href="css/themify-icons.css">
+	
+	<link rel="stylesheet" href="css/bootstrap.css">
+	
+	<link rel="stylesheet" href="css/magnific-popup.css">
+	
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+	<link rel="stylesheet" href="css/flexslider.css">
+	<link rel="stylesheet" href="css/style.css">
+
+	<script src="js/modernizr-2.6.2.min.js"></script>
+	</head>
+	<body>
+		
+	<div class="gtco-loader"></div>
+	
+	<div id="page">
 		<nav class="gtco-nav" role="navigation">
 		<div class="container">
 			<div class="pages">
@@ -20,12 +41,40 @@
 						<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 						<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 						<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
-						<li class="btn-cta"><a href="#" data-nav-section="scripts-download"><span>Скрипты для скачивания</span></a></li>
+						<li class="btn-cta"><a href="index.html" data-nav-section="scripts-download"><span>Скрипты для скачивания</a></span></a></li>
 					</ul>
 				</div>
 			</div>
 			
 		</div>
 	</nav>
-</body>
+
+	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 col-md-offset-0 text-center">
+					<div class="display-t">
+						<div class="display-tc">
+							<h1 class="animate-box" data-animate-effect="fadeIn">луня роджерс хороший человек</h1>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>	
+	</div>
+
+	
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.waypoints.min.js"></script>
+	<script src="js/jquery.stellar.min.js"></script>
+	<script src="js/jquery.magnific-popup.min.js"></script>
+	<script src="js/magnific-popup-options.js"></script>
+	<script src="js/main.js"></script>
+
+	</body>
 </html>
+
