--- a/downloads.html
+++ b/downloads.html
@@ -56,7 +56,7 @@
 				<div class="col-md-12 col-md-offset-0 text-center">
 					<div class="display-t">
 						<div class="display-tc">
-							<h1 class="animate-box" data-animate-effect="fadeIn">луня роджерс хороший человек</h1>
+							<h1 class="animate-box" data-animate-effect="fadeIn">я пидор вонючий</h1>
 						</div>
 					</div>
 				</div>
