--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 						<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 						<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
-						<li><a href="/downloads.html">репозиторий</a></li>
+						<li><a href="https://rojerscripts.github.io/downloads.html">репозиторий</a></li>
 					</ul>
 				</div>
 			</div>
