--- a/index.html
+++ b/index.html
@@ -1,73 +1,40 @@
-<!DOCTYPE HTML>
+
+<!DOCTYPE html>
 <html>
-	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>rojerscripts &mdash; test</title>
-
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/themify-icons.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-
-	<link rel="stylesheet" href="css/flexslider.css">
-	<link rel="stylesheet" href="css/style.css">
-
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	</head>
-	<body>
-		
-	<div class="gtco-loader"></div>
-	
-	<div id="page">
-	<nav class="gtco-nav" role="navigation">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-2 col-xs-12">
-					<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/fonts/style.css">
+        <link rel="stylesheet" href="/css/style.css">
+		<script src="https://kit.fontawesome.com/3aa3202a15.js" crossorigin="anonymous"></script>
+        <title>ronnysoftware</title>
+    </head>
+    <body>
+        <nav>
+            <div class="nav">
+                <h1 class="logo">ronnysoftware</h1>
+                <ul class="pages">
+                    <li><a href="/">главная</a></li>
+                    <li><a href="/news">новости</a></li>
+                    <li><a href="/repos">репозиторий</a></li>
+                    <li><a tagret="_blank" href="http://ronnyevans.tk">разработчик</a></li>
+                </ul>
+                <div class="contacts-block">
+					<a class="contact" href="https://vk.com/ronnysoftware" title="Перейти в группу VK"><i class="fab fa-vk"></i></a>
+					<a class="contact" href="https://t.me/ronnysoftware" title="Перейти в Telegram канал"><i class="fab fa-telegram"></i></a>
 				</div>
-				<div class="col-xs-10 text-right menu-1 main-nav">
-					<ul>
-						<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
-						<li><a href="#" data-nav-section="about">Информация о скриптах</a></li>
-						<li><a href="#" data-nav-section="practice-areas">Контакты для связи</a></li>
-						<li class="btn-cta"><a href="#" data-nav-section="contact"><span>Скрипты для скачивания</span></a></li>
-					</ul>
-				</div>
-			</div>
-			
-		</div>
-	</nav>
-
-	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-center">
-					<div class="display-t">
-						<div class="display-tc">
-							<h1 class="animate-box" data-animate-effect="fadeIn">луня роджерс хороший человек</h1>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>	
-	</div>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery.easing.1.3.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.waypoints.min.js"></script>
-	<script src="js/jquery.stellar.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/magnific-popup-options.js"></script>
-	<script src="js/main.js"></script>
-
-	</body>
+            </div>
+        </nav>
+        <div class="inner-content">
+            <p>Привет</p>
+            ты попал на сайт ronnysoftware<br>
+            тут, ты сможешь найти все скрипты которые были написаны мной<br>
+            используй меню для переходов на другие страницы 
+        </div>
+        
+        <div class="contacts-block contacts-block-footer">
+            <a class="contact" href="https://vk.com/ronnysoftware" title="Перейти в группу VK"><i class="fab fa-vk"></i></a>
+            <a class="contact" href="https://t.me/ronnysoftware" title="Перейти в Telegram канал"><i class="fab fa-telegram"></i></a>
+        </div>
+    </body>
 </html>
-
