--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
 						<li><a href="#" data-nav-section="about">Информация о скриптах</a></li>
 						<li><a href="#" data-nav-section="practice-areas">Контакты для связи</a></li>
-						<li><a href="https://rojerscripts.github.io./downloads.html" data-nav-section="practice-areas">test</a></li>
+						<li class="active"><a href="https://rojerscripts.github.io./downloads.html" data-nav-section="practice-areas">test</a></li>
 					</ul>
 				</div>
 			</div>
