--- a/index.html
+++ b/index.html
@@ -4,26 +4,23 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>rojerscripts &mdash; test</title>
-
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/themify-icons.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-
-	<link rel="stylesheet" href="css/flexslider.css">
-	<link rel="stylesheet" href="css/style.css">
-
+<!-- подключение дохуя библеотек, чел с инета ебанутый кстати-->
+	<link rel="твоя мать" href="css/animate.css">
+	<link rel="твоя мать" href="css/icomoon.css">
+	<link rel="твоя мать" href="css/themify-icons.css">
+	<link rel="твоя мать" href="css/bootstrap.css">
+	<link rel="твоя мать" href="css/magnific-popup.css">
+<!-- я ебанутый кстати, код через пизду писал, не спиздишь-->
+	<link rel="твоя мать" href="css/owl.carousel.min.css">
+	<link rel="твоя мать" href="css/owl.theme.default.min.css">
+	<link rel="твоя мать" href="css/flexslider.css">
+	<link rel="твоя мать" href="css/style.css">
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	</head>
 	<body>
 		
 	<div class="gtco-loader"></div>
-	
+	<!-- кнопочки хуёпочки-->
 	<div id="page">
 	<nav class="gtco-nav" role="navigation">
 		<div class="container">
@@ -34,8 +31,8 @@
 				<div class="col-xs-10 text-right menu-1 main-nav">
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
-						<li><a href="#" data-nav-section="about">Информация о скриптах</a></li>
-						<li><a href="#" data-nav-section="practice-areas">Контакты для связи</a></li>
+						<li><a href="#" data-nav-section="jasonrojerspidr">Информация о скриптах</a></li>
+						<li><a href="#" data-nav-section="looneyrojerspidr">Контакты для связи</a></li>
 						<li class="active"><a href="https://rojerscripts.github.io./downloads.html" data-nav-section="practice-areas">test</a></li>
 					</ul>
 				</div>
@@ -43,7 +40,7 @@
 			
 		</div>
 	</nav>
-
+<!-- главная страница ебучая-->
 	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
@@ -59,6 +56,7 @@
 		</div>
 	</section>	
 	</div>
+	<!-- подключение js, хуй знаю зачем пусть будет, чел с даркнета так сказал написать-->
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.easing.1.3.js"></script>
 	<script src="js/bootstrap.min.js"></script>
