--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>rojerscripts &mdash; test</title>
 <!-- подключение дохуя библеотек, чел с инета ебанутый кстати-->
-	<link rel="твоя мать" href="css/animate.css">
-	<link rel="твоя мать" href="css/icomoon.css">
-	<link rel="твоя мать" href="css/themify-icons.css">
-	<link rel="твоя мать" href="css/bootstrap.css">
-	<link rel="твоя мать" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/icomoon.css">
+	<link rel="stylesheet" href="css/themify-icons.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
 <!-- я ебанутый кстати, код через пизду писал, не спиздишь-->
-	<link rel="твоя мать" href="css/owl.carousel.min.css">
-	<link rel="твоя мать" href="css/owl.theme.default.min.css">
-	<link rel="твоя мать" href="css/flexslider.css">
-	<link rel="твоя мать" href="css/style.css">
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="css/flexslider.css">
+	<link rel="stylesheet" href="css/style.css">
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	</head>
 	<body>
