--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
 						<li><a href="#" data-nav-section="jasonrojerspidr">Информация о скриптах</a></li>
 						<li><a href="#" data-nav-section="looneyrojerspidr">Контакты для связи</a></li>
-						<li class="active"><a href="https://rojerscripts.github.io./downloads.html" data-nav-section="practice-areas">test</a></li>
+						<li><a href="/downloads.html" data-nav-section="downloads">Скрипты для скачивания</a></li>
 					</ul>
 				</div>
 			</div>
