--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 						<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
 						<li><a href="#" data-nav-section="jasonrojerspidr">Информация о скриптах</a></li>
 						<li><a href="#" data-nav-section="looneyrojerspidr">Контакты для связи</a></li>
-						<li><a href="/downloads.html" data-nav-section="downloads">Скрипты для скачивания</a></li>
+						<a href="/downloads.html"
+			class="menu-linkRow u-indentDepth0 js-offCanvasCopy "
+			
+			
+			data-nav-id="newPosts"><span>Новые сообщения</span></a>
 					</ul>
 				</div>
 			</div>
