--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 						<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
 						<li><a href="#" data-nav-section="jasonrojerspidr">Информация о скриптах</a></li>
 						<li><a href="#" data-nav-section="looneyrojerspidr">Контакты для связи</a></li>
-						<a href="/downloads.html"
-			class="menu-linkRow u-indentDepth0 js-offCanvasCopy "
+						<a href="https://arizona-rp.com"
+			class="p-navEl-link  "
 			
-			
-			data-nav-id="newPosts"><span>Новые сообщения</span></a>
+			data-xf-key="1"
+			data-nav-id="home"><span>Главная</span></a>
 					</ul>
 				</div>
 			</div>
