--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
 						<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
 						<li><a href="#" data-nav-section="jasonrojerspidr">Информация о скриптах</a></li>
 						<li><a href="#" data-nav-section="looneyrojerspidr">Контакты для связи</a></li>
-						<a href="https://arizona-rp.com"
-			class="p-navEl-link  "
-			
-			data-xf-key="1"
-			data-nav-id="home"><span>Главная</span></a>
+						<li><a href="/downloads.html">Новости</a></li>
 					</ul>
 				</div>
 			</div>
