--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 			
 		</div>
 	</nav>
+</div>
 <!-- главная страница ебучая-->
 	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
