--- a/index.html
+++ b/index.html
@@ -19,28 +19,18 @@
 	</head>
 	<body>
 		
-	<div class="gtco-loader"></div>
-	<!-- кнопочки хуёпочки-->
-	<div id="page">
-	<nav class="gtco-nav" role="navigation">
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-2 col-xs-12">
-					<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
-				</div>
-				<div class="col-xs-10 text-right menu-1 main-nav">
-					<ul>
-						<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
-						<li><a href="#" data-nav-section="jasonrojerspidr">Информация о скриптах</a></li>
-						<li><a href="#" data-nav-section="looneyrojerspidr">Контакты для связи</a></li>
-						<li><a href="/downloads.html">Новости</a></li>
-					</ul>
-				</div>
-			</div>
-			
-		</div>
-	</nav>
-</div>
+		<div id="headershort">
+			<div class="container">
+				<div class="header">
+		
+					<div class="topline">
+			<a href="/" class="logo"><img src="/072018/images/logo.svg" alt=""></a>
+			<ul class="main-menu">
+				<li><a href="/">Главная</a></li>
+		<li><a href="/news/list">Новости</a></li>
+		<li><a href="/#howtostart" onclick="scrollToHowToStart()">Как начать игру?</a></li>
+		<li><a href="http://forum.arizona-rp.com/">Форум</a></li>
+		<li><a href="/donate">Магазин</a></li> 
 <!-- главная страница ебучая-->
 	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
