--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 		
 	<div class="gtco-loader"></div>
 	<!-- кнопочки хуёпочки-->
-	<div class="container">
-		<div class="header">
+	<div id="page">
 	<nav class="gtco-nav" role="navigation">
 		<div class="container">
 			<div class="row">
@@ -42,6 +41,8 @@
 		</div>
 	</nav>
 </div>
+
+
 
 
 
