--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		
 	<div class="gtco-loader"></div>
 	<!-- кнопочки хуёпочки-->
-	<div id="page">
+	<div id="header">
 	<nav class="gtco-nav" role="navigation">
 		<div class="container">
 			<div class="row">
