--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div id="header">
 	<nav class="gtco-nav" role="navigation">
 		<div class="container">
-			<div class="row">
+			<div class="topline">
 				<div class="col-sm-2 col-xs-12">
 					<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
 				</div>
@@ -33,7 +33,7 @@
 						<li class="active"><a href="#" data-nav-section="home">Главная</a></li>
 						<li><a href="#" data-nav-section="jasonrojerspidr">Информация о скриптах</a></li>
 						<li><a href="#" data-nav-section="looneyrojerspidr">Контакты для связи</a></li>
-						<li><a href="/downloads.html">Новости</a></li>
+						<li class="active"><a href="/downloads.html" data-nav-section="downloads">СКРИПТЫ</a></li>
 					</ul>
 				</div>
 			</div>
