--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<div class="gtco-loader"></div>
 	<!-- кнопочки хуёпочки-->
 	<div id="header">
-	<nav class="gtco-nav" role="navigation">
 		<div class="container">
+			<div class="header">
 			<div class="topline">
 				<div class="col-sm-2 col-xs-12">
 					<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
