--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		
-
+	<div class="gtco-loader"></div>
 	<!-- кнопочки хуёпочки-->
 	<div id="header">
 		<div class="container">
@@ -30,6 +30,7 @@
 	<li><a href="http://forum.arizona-rp.com/">Форум</a></li>
 	<li><a href="/donate">Магазин</a></li> 
 			
+
 
 <!-- главная страница ебучая-->
 	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
