--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<li><a href="/#howtostart" onclick="scrollToHowToStart()">Как начать игру?</a></li>
 	<li><a href="http://forum.arizona-rp.com/">Форум</a></li>
 	<li><a href="/donate">Магазин</a></li> 
-			
+	</div>
 
 
 <!-- главная страница ебучая-->
