--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	</head>
 	<body>
-		
 	<div class="gtco-loader"></div>
 	<!-- кнопочки хуёпочки-->
 	<div id="header">
+		<div class="col-sm-2 col-xs-12"></div>
 		<div class="container">
 			<div class="header">
 			<li><a href="/">Главная</a></li>
