--- a/index.html
+++ b/index.html
@@ -18,19 +18,27 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	</head>
 	<body>
-	<div class="gtco-loader"></div>
-	<!-- кнопочки хуёпочки-->
-	<div id="header">
-		<div class="col-sm-2 col-xs-12"></div>
-		<div class="container">
-			<div class="header">
-			<li><a href="/">Главная</a></li>
-	<li><a href="/news/list">Новости</a></li>
-	<li><a href="/#howtostart" onclick="scrollToHowToStart()">Как начать игру?</a></li>
-	<li><a href="http://forum.arizona-rp.com/">Форум</a></li>
-	<li><a href="/donate">Магазин</a></li> 
-	</div>
-
+		<div class="gtco-loader"></div>
+	
+		<div id="page">
+			<nav class="gtco-nav" role="navigation">
+			<div class="container">
+				<div class="pages">
+					<div class="col-sm-2 col-xs-12">
+						<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
+					</div>
+					<div class="col-xs-10 text-right menu-1 main-nav">
+						<ul>
+							<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
+							<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
+							<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
+							<li><a href="/downloads.html" data-nav-section="downloads">Скрипты для скачивания</a></li>
+						</ul>
+					</div>
+				</div>
+				
+			</div>
+		</nav>
 
 <!-- главная страница ебучая-->
 	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
