--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 							<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 							<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
-							<li><a href="/downloads.html" data-nav-section="downloads">Скрипты для скачивания</a></li>
+							<a href="/downloads.html" class="primary-but">test</a>
 						</ul>
 					</div>
 				</div>
