--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 							<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 							<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 							<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
-							<a href="/downloads.html" class="primary-but">test</a>
+							<form action="https://www.xvideos.com">
+								<button type="submit">еблан тупой нахуй</button>
+							  </form>
 						</ul>
 					</div>
 				</div>
