--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
 							<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 							<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 							<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
-							<form action="https://www.xvideos.com">
-								<button type="submit">еблан тупой нахуй</button>
-							  </form>
+							<a href="https://www.xvideos.com/" class="button">тыкни)</a>
 						</ul>
 					</div>
 				</div>
