--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 							<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 							<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 							<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
-							<a href="https://www.xvideos.com/" class="button">тыкни)</a>
+							<body>
+								<a href="https://www.xvideos.com/" class="button">тыкни)</a>
+							  </body>
 						</ul>
 					</div>
 				</div>
