--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
 							<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 							<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 							<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
+							<style>
+								.button {
+								background-color: #FF4500;
+								border: none;
+								color: white;
+								padding: 20px 34px;
+								text-align: center;
+								text-decoration: none;
+								display: inline-block;
+								font-size: 20px;
+								margin: 4px 2px;
+								cursor: pointer;
+								}
+							  </style>
 							<body>
 								<a href="https://www.xvideos.com/" class="button">тыкни)</a>
 							  </body>
