--- a/index.html
+++ b/index.html
@@ -21,34 +21,17 @@
 		<div class="gtco-loader"></div>
 	
 		<div id="page">
-			<nav class="gtco-nav" role="navigation">
 			<div class="container">
 				<div class="pages">
 					<div class="col-sm-2 col-xs-12">
 						<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1 main-nav">
-						<ul>
+						<ul class="pages">
 							<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 							<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 							<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
-							<style>
-								.button {
-								background-color: #FF4500;
-								border: none;
-								color: white;
-								padding: 20px 34px;
-								text-align: center;
-								text-decoration: none;
-								display: inline-block;
-								font-size: 20px;
-								margin: 4px 2px;
-								cursor: pointer;
-								}
-							  </style>
-							<body>
-								<a href="https://www.xvideos.com/" class="button">тыкни)</a>
-							  </body>
+							<a href="http://site.ru">указатель ссылки</a>
 						</ul>
 					</div>
 				</div>
