--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<div class="gtco-loader"></div>
 	
 		<div id="page">
+			<nav class="gtco-nav" role="navigation"></nav>
 			<div class="container">
 				<div class="pages">
 					<div class="col-sm-2 col-xs-12">
