--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 		<div class="gtco-loader"></div>
 	
 		<div id="page">
-			<nav class="gtco-nav" role="navigation"></nav>
+			<nav class="gtco-nav" role="navigation">
 			<div class="container">
 				<div class="pages">
 					<div class="col-sm-2 col-xs-12">
 						<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1 main-nav">
-						<ul class="pages">
+						<ul>
 							<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 							<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 							<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
