--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>rojerscripts &mdash; test</title>
 <!-- подключение дохуя библеотек, чел с инета ебанутый кстати-->
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/themify-icons.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
 <!-- я ебанутый кстати, код через пизду писал, не спиздишь-->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -19,7 +14,7 @@
 	</head>
 	<body>
 		<div class="gtco-loader"></div>
-	
+		<nav>
 		<div id="page">
 			<nav class="gtco-nav" role="navigation">
 			<div class="container">
@@ -28,7 +23,7 @@
 						<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1 main-nav">
-						<ul>
+						<ul class="">
 							<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
 							<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
 							<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
