--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>rojerscripts &mdash; test</title>
 <!-- подключение дохуя библеотек, чел с инета ебанутый кстати-->
+	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="css/icomoon.css">
+	<link rel="stylesheet" href="css/themify-icons.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
 <!-- я ебанутый кстати, код через пизду писал, не спиздишь-->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -16,6 +21,7 @@
 		<div class="gtco-loader"></div>
 		<nav>
 		<div id="page">
+			<nav class="gtco-nav" role="navigation">
 			<div class="container">
 				<div class="pages">
 					<div class="col-sm-2 col-xs-12">
