--- a/index.html
+++ b/index.html
@@ -1,71 +1,12 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-	<meta charset="utf-8">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>rojerscripts &mdash; test</title>
-<!-- подключение дохуя библеотек, чел с инета ебанутый кстати-->
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/icomoon.css">
-	<link rel="stylesheet" href="css/themify-icons.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-<!-- я ебанутый кстати, код через пизду писал, не спиздишь-->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<link rel="stylesheet" href="css/flexslider.css">
-	<link rel="stylesheet" href="css/style.css">
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	</head>
-	<body>
-		<div class="gtco-loader"></div>
-		<nav>
-		<div id="page">
-			<nav class="gtco-nav" role="navigation">
-			<div class="container">
-				<div class="pages">
-					<div class="col-sm-2 col-xs-12">
-						<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
-					</div>
-					<div class="col-xs-10 text-right menu-1 main-nav">
-						<ul class="">
-							<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
-							<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
-							<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
-							<a href="http://site.ru">указатель ссылки</a>
-						</ul>
-					</div>
-				</div>
-				
-			</div>
-		</nav>
-
-<!-- главная страница ебучая-->
-	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-center">
-					<div class="display-t">
-						<div class="display-tc">
-							<h1 class="animate-box" data-animate-effect="fadeIn">луня роджерс хороший человек</h1>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>	
-	</div>
-	<!-- подключение js, хуй знаю зачем пусть будет, чел с даркнета так сказал написать-->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery.easing.1.3.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.waypoints.min.js"></script>
-	<script src="js/jquery.stellar.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/magnific-popup-options.js"></script>
-	<script src="js/main.js"></script>
-
-	</body>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
+	
+</body>
 </html>
-
