--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 	<title>💻 rojerscripts</title>
 </head>
 <body>
-	
+	<nav>
+		<div class="nav">
+			<h1 class="logo">rojerscripts</h1>
+			<ul class="pages">
+				<li><a href="/">главная</a></li>
+				<li><a href="/news">новости</a></li>
+				<li><a href="/repos">репозиторий</a></li>
+				<li><a tagret="_blank" href="http://ronnyevans.tk">разработчик</a></li>
+			</ul>
+			<div class="contacts-block">
+				<a class="contact" href="https://vk.com/ronnysoftware" title="Перейти в группу VK"><i class="fab fa-vk"></i></a>
+				<a class="contact" href="https://t.me/ronnysoftware" title="Перейти в Telegram канал"><i class="fab fa-telegram"></i></a>
+			</div>
+		</div>
+	</nav>
 </body>
 </html>
