--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
 			</div>
 		</div>
 	</nav>
+	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5"></section>
 </body>
 </html>
