--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 			</div>
 		</div>
 	</nav>
-	<img src="images/background.jpg">
+	<img src="images/background.jpg" width=”500px>
 </body>
 </html>
