--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<ul class="pages">
 				<li><a href="/">главная</a></li>
 				<li><a href="/news">новости</a></li>
-				<li><a href="/repos">репозиторий</a></li>
-				<li><a tagret="_blank" href="http://ronnyevans.tk">разработчик</a></li>
+				<li><a href="/repos">скрипты для скачивания</a></li>
+				<li><a tagret="_blank" href="xxxxx">разработчики</a></li>
 			</ul>
 			<div class="contacts-block">
 				<a class="contact" href="https://vk.com/ronnysoftware" title="Перейти в группу VK"><i class="fab fa-vk"></i></a>
