--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 			<h1 class="logo">rojerscripts</h1>
 			<ul class="pages">
 				<li><a href="/">главная</a></li>
-				<li><a href="/news">новости</a></li>
-				<li><a href="/repos">скрипты для скачивания</a></li>
-				<li><a tagret="_blank" href="xxxxx">разработчики</a></li>
+				<li><a href="/news">Информация</a></li>
+				<li><a href="/repos">разработчики</a></li>
+				<li><a tagret="_blank" href="xxxxx">скрипты для скачивания</a></li>
 			</ul>
 			<div class="contacts-block">
 				<a class="contact" href="https://vk.com/ronnysoftware" title="Перейти в группу VK"><i class="fab fa-vk"></i></a>
