--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<h1 class="logo">rojerscripts</h1>
 			<ul class="pages">
 				<li><a href="/">главная</a></li>
-				<li><a href="/news">Информация</a></li>
+				<li><a href="/news">информация</a></li>
 				<li><a href="/repos">разработчики</a></li>
 				<li><a tagret="_blank" href="xxxxx">скрипты для скачивания</a></li>
 			</ul>
