--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<nav>
 		<div class="nav">
-			<h1 class="logo">rojerscripts</h1>
+			<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
 			<ul class="pages">
 				<li><a href="/">главная</a></li>
 				<li><a href="/news">информация</a></li>
