--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 	<nav>
 		<div class="nav">
-			<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
+			<div class="col-sm-2 col-xs-12">
+				<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
+			</div>
 			<ul class="pages">
 				<li><a href="/">главная</a></li>
 				<li><a href="/news">информация</a></li>
