--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 <body>
 	<nav>
 		<div class="nav">
+			<div class="container">
 			<div class="col-sm-2 col-xs-12">
 				<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
 			</div>
+		</div>
 			<ul class="pages">
-				<li><a href="/">главная</a></li>
-				<li><a href="/news">информация</a></li>
-				<li><a href="/repos">разработчики</a></li>
-				<li><a tagret="_blank" href="xxxxx">скрипты для скачивания</a></li>
+				<li><a href="https://www.xvideos.com">главная</a></li>
+				<li><a href="https://www.xvideos.com">информация</a></li>
+				<li><a href="https://www.xvideos.com">разработчики</a></li>
+				<li><a tagret="_blank" href="https://www.xvideos.com">скрипты для скачивания</a></li>
 			</ul>
 			<div class="contacts-block">
-				<a class="contact" href="https://vk.com/ronnysoftware" title="Перейти в группу VK"><i class="fab fa-vk"></i></a>
-				<a class="contact" href="https://t.me/ronnysoftware" title="Перейти в Telegram канал"><i class="fab fa-telegram"></i></a>
+				<a class="contact" href="https://vk.com/j.rojers" title="Перейти в группу VK"><i class="fab fa-vk"></i></a>
+				<a class="contact" href="https://www.xvideos.com" title="Перейти в Telegram канал"><i class="fab fa-telegram"></i></a>
 			</div>
 		</div>
 	</nav>
