--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/fonts/style.css">
 	<link rel="stylesheet" href="/css/style.css">
+
 	<script src="https://kit.fontawesome.com/3aa3202a15.js" crossorigin="anonymous"></script>
 	<title>💻 rojerscripts</title>
 </head>
 <body>
 	<nav>
 		<div class="nav">
-			<div class="container">
-			<div class="col-sm-2 col-xs-12">
-				<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
-			</div>
-		</div>
+			<h1 class="logo"><b>ROJERS</b>собака</h1>
 			<ul class="pages">
 				<li><a href="https://www.xvideos.com">главная</a></li>
 				<li><a href="https://www.xvideos.com">информация</a></li>
@@ -23,7 +20,7 @@
 				<li><a tagret="_blank" href="https://www.xvideos.com">скрипты для скачивания</a></li>
 			</ul>
 			<div class="contacts-block">
-				<a class="contact" href="https://vk.com/j.rojers" title="Перейти в группу VK"><i class="fab fa-vk"></i></a>
+				<a class="contact" href="https://www.xvideos.com" title="Перейти в группу VK"><i class="fab fa-vk"></i></a>
 				<a class="contact" href="https://www.xvideos.com" title="Перейти в Telegram канал"><i class="fab fa-telegram"></i></a>
 			</div>
 		</div>
