--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<nav>
 		<div class="nav">
-			<h1 class="logo"><b>ROJERS</b>собака</h1>
+			<h1 class="logo"><b>rojers</b>cripts</h1>
 			<ul class="pages">
 				<li><a href="https://www.xvideos.com">главная</a></li>
 				<li><a href="https://www.xvideos.com">информация</a></li>
