--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<li><a href="https://www.xvideos.com">информация</a></li>
 				<li><a href="https://www.xvideos.com">разработчики</a></li>
 				<li><a tagret="_blank" href="https://www.xvideos.com">скрипты для скачивания</a></li>
+				<li class="btn-cta"><a href="мойхуй.ру" data-nav-section="contact">для ебланов</a></li>
 			</ul>
 		</div>
 	</nav>
