--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="/fonts/style.css">
 	<link rel="stylesheet" href="/css/style.css">
 
-	<script src="https://kit.fontawesome.com/3aa3202a15.js" crossorigin="anonymous"></script>
+	<script src="https://kit.fontawesome.com/3aa3202a15.js" crossorigin="aboba"></script>
 	<title>💻 rojerscripts</title>
 </head>
 <body>
