--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/fonts/style.css">
 	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/animate.css">
 
 	<script src="https://kit.fontawesome.com/3aa3202a15.js" crossorigin="aboba"></script>
 	<title>💻 rojerscripts</title>
