--- a/index.html
+++ b/index.html
@@ -23,18 +23,15 @@
 			</ul>
 		</div>
 	</nav>
-	<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-center">
-					<div class="display-t">
-						<div class="display-tc">
-							<h1 class="animate-box" data-animate-effect="fadeIn">The Greatest Firm You Can Trust</h1>
-							<p class="gtco-video-link animate-box" data-animate-effect="fadeIn"><a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-controller-play"></i></a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+	<div class="inner-content">
+		<p>rojerscripts</p>
+		Совместные работы от разработчиков rojerscripts<br>
+		Именно здесь собраны все скрипты, которые были написаны лично нами.<br>
+		Немного информации по вкладкам:<br>
+		Главная - переход по главной странице<br>
+		Информация - информация (логи) по обновлению наших скриптов. <br>
+		Разработчики - список разработчиков работая в rojerscripts.<br>
+		Скрипты для скачиваний - список всех нужных скриптов, библиотек, программ для работы наших скриптов.<br>
+	</div>
 </body>
 </html>
