--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 		<div class="nav">
 			<h1 class="logo"><b>rojers</b>cripts</h1>
 			<ul class="pages">
-				<li><a href="https://www.xvideos.com">бля</a></li>
+				<li><a href="https://www.xvideos.com">главная</a></li>
 				<li><a href="https://www.xvideos.com">информация</a></li>
 				<li><a href="https://www.xvideos.com">разработчики</a></li>
 				<li><a tagret="_blank" href="https://www.xvideos.com">скрипты для скачивания</a></li>
-				<li class="btn-cta"><a href="мойхуй.ру" data-nav-section="contact">для ебланов</a></li>
 			</ul>
 		</div>
 	</nav>
