--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			</ul>
 		</div>
 	</nav>
-	<div class="inner-content">
-		<p>rojerscripts</p>
+	<div class="ebaniy-obema">
+		<p style="text-align:center">rojerscripts</p>
 		Совместные работы от разработчиков rojerscripts<br>
 		Именно здесь собраны все скрипты, которые были написаны лично нами.<br>
 		Немного информации по вкладкам:<br>
