--- a/index.html
+++ b/index.html
@@ -23,14 +23,7 @@
 		</div>
 	</nav>
 	<div class="ebaniy-obema">
-		<p style="text-align:center">rojerscripts</p>
-		Совместные работы от разработчиков rojerscripts<br>
-		Именно здесь собраны все скрипты, которые были написаны лично нами.<br>
-		Немного информации по вкладкам:<br>
-		Главная - переход по главной странице<br>
-		Информация - информация (логи) по обновлению наших скриптов. <br>
-		Разработчики - список разработчиков работая в rojerscripts.<br>
-		Скрипты для скачиваний - список всех нужных скриптов, библиотек, программ для работы наших скриптов.<br>
+		<p style="text-align:center">Совместные работы от разработчиков rojerscripts</p>
 	</div>
 </body>
 </html>
