--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<li><a href="https://www.xvideos.com">главная</a></li>
 				<li><a href="https://www.xvideos.com">информация</a></li>
 				<li><a href="https://www.xvideos.com">разработчики</a></li>
-				<li><a tagret="_blank" href="https://www.xvideos.com">скрипты для скачивания</a></li>
+				<li><a tagret="_blank" href="downloads.html">скрипты для скачивания</a></li>
 			</ul>
 		</div>
 	</nav>
