--- a/downloads.html
+++ b/downloads.html
@@ -1,84 +1,29 @@
-<?php
-
-include(index.php)
-?php>
-<!DOCTYPE HTML>
-<html>
-	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>rojerscripts &mdash; Скрипты для скачивания</title>
-	
-	
-
-	<link rel="stylesheet" href="css/animate.css">
-	
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="/fonts/style.css">
+	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
-
-	<link rel="stylesheet" href="css/themify-icons.css">
-	
-	<link rel="stylesheet" href="css/bootstrap.css">
-	
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-
-	<link rel="stylesheet" href="css/flexslider.css">
-	<link rel="stylesheet" href="css/style.css">
-
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	</head>
-	<body>
-		
-	<div class="gtco-loader"></div>
-	
-	<div id="page">
-		<nav class="gtco-nav" role="navigation">
-		<div class="container">
-			<div class="pages">
-				<div class="col-sm-2 col-xs-12">
-					<div id="gtco-logo"><a href="https://rojerscripts.github.io">rojer<em>scripts</em></a></div>
-				</div>
-				<div class="col-xs-10 text-right menu-1 main-nav">
-					<ul>
-						<li class="active"><a href="#" data-nav-section="looneyrojerspidr">Главная</a></li>
-						<li><a href="#" data-nav-section="infoscripts">Информация о скриптах</a></li>
-						<li><a href="#" data-nav-section="svyaz">Контакты для связи</a></li>
-						<li><a href="/downloads.html" data-nav-section="downloads">Скрипты для скачивания</a></li>
-					</ul>
-				</div>
-			</div>
-			
+	<script src="https://kit.fontawesome.com/3aa3202a15.js" crossorigin="aboba"></script>
+	<title>💻 rojerscripts</title>
+</head>
+<body>
+	<nav>
+		<div class="nav">
+			<h1 class="logo"><b>rojers</b>cripts</h1>
+			<ul class="pages">
+				<li><a href="https://www.xvideos.com">главная</a></li>
+				<li><a href="https://www.xvideos.com">информация</a></li>
+				<li><a href="https://www.xvideos.com">разработчики</a></li>
+				<li><a tagret="_blank" href="https://www.xvideos.com">скрипты для скачивания</a></li>
+			</ul>
 		</div>
 	</nav>
-
-	<section id="gtco-hero" class="gtco-cover" style="background-image: url(images/background.jpg);"  data-section="home"  data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-center">
-					<div class="display-t">
-						<div class="display-tc">
-							<h1 class="animate-box" data-animate-effect="fadeIn">я пидор вонючий</h1>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>	
+	<div class="ebaniy-obema">
+		<p style="text-align:center">Совместные работы от разработчиков rojerscripts</p>
 	</div>
-
-	
-	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery.easing.1.3.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.waypoints.min.js"></script>
-	<script src="js/jquery.stellar.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/magnific-popup-options.js"></script>
-	<script src="js/main.js"></script>
-
-	</body>
+</body>
 </html>
-
