--- a/downloads.html
+++ b/downloads.html
@@ -23,7 +23,11 @@
 		</div>
 	</nav>
 	<div class="ebaniy-obema">
-		<p style="text-align:center">Скрипты для скачивания</p>
+		<p style="text-align:center">
+			
+			
+			
+			Скрипты для скачивания</p>
 	</div>
 </body>
 </html>
