--- a/downloads.html
+++ b/downloads.html
@@ -23,11 +23,8 @@
 		</div>
 	</nav>
 	<div class="ebaniy-obema">
-		<p style="text-align:center">
-			
-			
-			
-			Скрипты для скачивания</p>
+		<p style="text-align:center">Скрипты для скачивания</p>
+		<script type="module" src="/js/downloads.js"></script>
 	</div>
 </body>
 </html>
