--- a/downloads.html
+++ b/downloads.html
@@ -18,7 +18,7 @@
 				<li><a href="index">главная</a></li>
 				<li><a href="https://www.xvideos.com">информация</a></li>
 				<li><a href="https://www.xvideos.com">разработчики</a></li>
-				<li><a tagret="_blank" href="downloads">скрипты для скачивания</a></li>
+				<li><a tagret="_blank" href="downloads"><b>скрипты для скачивания</b></a></li>
 			</ul>
 		</div>
 	</nav>
