--- a/downloads.html
+++ b/downloads.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<script src="https://kit.fontawesome.com/3aa3202a15.js" crossorigin="aboba"></script>
-	<title>💻 rojerscripts</title>
+	<title>rojerscripts</title>
 </head>
 <body>
 	<nav>
