--- a/downloads.html
+++ b/downloads.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<link rel="icon" sizes="16x16" href="/img/favicon-16.png">
