--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="/fonts/style.css">
 	<link rel="stylesheet" href="/css/style.css">
 	<script src="https://kit.fontawesome.com/3aa3202a15.js" crossorigin="aboba"></script>
-	<title> rojerscripts | main</title>
+	<title> rojerscripts | test</title>
 </head>
 <body>
 	<nav>
