--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 			<h1 class="logo"><b>rojerscripts | main</b> </h1>
 			<ul class="pages">
 				<li><a href="#"><b>главная</b></a></li>
-				<li><a href="https://www.xvideos.com">информация</a></li>
-				<li><a href="https://www.xvideos.com">разработчики</a></li>
-				<li><a tagret="_blank" href="downloads">скрипты для скачивания</a></li>
+				<li><a href="https://www.xvideos.com"><b>информация</b></a></li>
+				<li><a href="https://www.xvideos.com"><b>разработчики</b></a></li>
+				<li><a tagret="_blank" href="downloads"><b>скрипты для скачивания</b></a></li>
 			</ul>
 		</div>
 	</nav>
