--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<ul class="pages">
 				<li><a href="#"><b>главная</b></a></li>
 				<li><a href="https://www.xvideos.com"><b>информация</b></a></li>
-				<li><a href="https://www.xvideos.com"><b>разработчики</b></a></li>
+				<li><a href="https://www.xvideos.com"><b>о разработчиках</b></a></li>
 				<li><a tagret="_blank" href="downloads"><b>скрипты для скачивания</b></a></li>
 			</ul>
 		</div>
