--- a/downloads.html
+++ b/downloads.html
@@ -9,12 +9,12 @@
 	<link rel="stylesheet" href="/css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<script src="https://kit.fontawesome.com/3aa3202a15.js" crossorigin="aboba"></script>
-	<title> rojerscripts | download</title>
+	<title> rojerscripts | downloads</title>
 </head>
 <body>
 	<nav>
 		<div class="nav">
-			<h1 class="logo"><b>rojers</b>cripts | <b>downloads</b> </h1>
+			<h1 class="logo"><b>rojerscripts | downloads</b> </h1>
 			<ul class="pages">
 				<li><a href="index">главная</a></li>
 				<li><a href="https://www.xvideos.com">информация</a></li>
