--- a/downloads.html
+++ b/downloads.html
@@ -16,9 +16,9 @@
 		<div class="nav">
 			<h1 class="logo"><b>rojerscripts | downloads</b> </h1>
 			<ul class="pages">
-				<li><a href="index">главная</a></li>
-				<li><a href="https://www.xvideos.com">информация</a></li>
-				<li><a href="https://www.xvideos.com">разработчики</a></li>
+				<li><a href="#"><b>главная</b></a></li>
+				<li><a href="https://www.xvideos.com"><b>информация</b></a></li>
+				<li><a href="https://www.xvideos.com"><b>о разработчиках</b></a></li>
 				<li><a tagret="_blank" href="downloads"><b>скрипты для скачивания</b></a></li>
 			</ul>
 		</div>
