--- a/downloads.html
+++ b/downloads.html
@@ -27,5 +27,6 @@
 		<p style="text-align:center">Скрипты для скачивания</p>
 		<script type="module" src="/js/downloads.js"></script>
 	</div>
+	<p style="text-align:center">Дополнительные плагины для работы с приложениями</p>
 </body>
 </html>
