--- a/downloads.html
+++ b/downloads.html
@@ -26,5 +26,6 @@
 		<script type="module" src="/js/downloads.js"></script>
 	</div>
 	<p style="text-align:center">Дополнительные плагины для работы с приложениями</p>
+	<script type="module" src="/js/dopdownloads.js"></script>
 </body>
 </html>
