--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<nav>
 		<div class="nav">
-			<h1 class="logo"><b>rojerscripts | test</b> </h1>
+			<h1 class="logo"><b>rojerscripts | main</b> </h1>
 			<ul class="pages">
 				<li><a href="index"><b>главная</b></a></li>
 				<li><a href="https://www.xvideos.com"><b>информация</b></a></li>
