--- a/downloads.html
+++ b/downloads.html
@@ -25,9 +25,9 @@
 		<p style="text-align:center">Скрипты для скачивания</p>
 		<script type="module" src="/js/downloads.js"></script>
 	</div>
-	<div class="ebaniy-putin">
-	<p style="text-align:center">Дополнительные плагины для работы с приложениями</p>
-	<script type="module" src="/js/dopdownloads.js"></script>
-</div>
+	<div class="ebaniy-sdfdsfsd">
+		<p style="text-align:center">дополнитель</p>
+		<script type="module" src="/js/dopdownloads.js"></script>
+	</div>
 </body>
 </html>
