--- a/downloads.html
+++ b/downloads.html
@@ -22,12 +22,8 @@
 		</div>
 	</nav>
 	<div class="ebaniy-obema">
-		<p style="text-align:center">Скрипты для скачивания</p>
+		<p style="text-align:center">Скрипты для скачивания / дополнительные скрипты для работы</p>
 		<script type="module" src="/js/downloads.js"></script>
-	</div>
-	<div class="ebaniy-sdfdsfsd">
-		<p style="text-align:center">дополнитель</p>
-		<script type="module" src="/js/dopdownloads.js"></script>
 	</div>
 </body>
 </html>
