--- a/downloads.html
+++ b/downloads.html
@@ -16,7 +16,7 @@
 			<ul class="pages">
 				<li><a href="index"><b>главная</b></a></li>
 				<li><a href="info"><b>информация</b></a></li>
-				<li><a href="https://www.xvideos.com"><b>о разработчиках</b></a></li>
+				<li><a href="developerinfo"><b>о разработчиках</b></a></li>
 				<li><a tagret="_blank" href="downloads"><b>скрипты для скачивания</b></a></li>
 			</ul>
 		</div>
