--- a/info.html
+++ b/info.html
@@ -22,8 +22,9 @@
 			</ul>
 		</div>
 	</nav>
-	<div class="ebaniy-obema">
-
+	<div class="ebaniy-neobema">
+		<p style="text-align:center">UPDATE LOG | NEWS</p>
+		<script type="module" src="/js/news.js"></script>
 	</div>
 </body>
 </html>
