--- a/developerinfo.html
+++ b/developerinfo.html
@@ -23,7 +23,7 @@
 		</div>
 	</nav>
 	<div class="ebaniy-obema">
-
+		<script type="module" src="/js/developers.js"></script>
 	</div>
 </body>
 </html>
