--- a/developerinfo.html
+++ b/developerinfo.html
@@ -22,7 +22,7 @@
 			</ul>
 		</div>
 	</nav>
-	<div class="neebaniy-obema">
+	<div class="neebaniy-neobema">
 		<script type="module" src="/js/developers.js"></script>
 	</div>
 </body>
