--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<title>  rojerscripts | main</title>
 </head>
 <body>
+	<audio src="img/music.mp3" autoplay="autoplay"></audio>
 	<nav>
 		<div class="nav">
 			<h1 class="logo"><b>rojerscripts | main</b> </h1>
@@ -25,6 +26,5 @@
 	<div class="ebaniy-obema">
 		<p style="text-align:center">Совместные работы от разработчиков rojerscripts</p>
 	</div>
-	<audio src="https://me.robo-hamster.ru/music.mp3" id="mp3" loop="loop"></audio>
 </body>
 </html>
